--- a/track.html
+++ b/track.html
@@ -143,7 +143,7 @@
 
 <div class="search-container">
   <select id="mood">
-    <option value="0">Select Mood</option>
+    <option value="0">Select Mood...</option>
     <option value="chill">Chill</option>
     <option value="sad">Sad</option>
     <option value="happy">Happy</option>
