--- a/second_page.html
+++ b/second_page.html
@@ -1,202 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Spotify API Mood Search</title>
-<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-<style>
-/* Body style */
-body {
-  font-family: Arial, sans-serif;
-  margin: 0;
-  padding: 20px;
-  background-color: #f9f9f9;
-  color: #333;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-/* Heading style */
-h1 {
-  color: #1db954;
-  text-align: center;
-  margin-bottom: 20px;
-}
-
-/* Search container */
-.search-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin-bottom: 20px;
-}
-
-/* Track details container */
-.track-details {
-  width: 100%;
-  max-width: 800px;
-  text-align: center;
-  background-color: #fff;
-  padding: 20px;
-  border-radius: 8px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  margin-bottom: 20px;
-}
-
-/* Track title */
-.track-title {
-  font-size: 24px;
-  font-weight: bold;
-  margin-bottom: 10px;
-}
-
-/* Artist name and release year */
-.artist-release {
-  font-size: 18px;
-  margin-bottom: 20px;
-}
-
-/* Spotify embed style */
-iframe {
-  width: 100%;
-  height: 300px;
-  border: none;
-  border-radius: 8px;
-  margin-bottom: 20px;
-}
-
-/* Select dropdown style */
-#moods {
-  padding: 10px;
-  border-radius: 4px;
-  border: 1px solid #ccc;
-  width: 250px;
-  margin-bottom: 20px;
-  font-size: 16px;
-}
-
-/* Search button style */
-button {
-  padding: 10px 20px;
-  background-color: #1db954;
-  color: #fff;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-  font-size: 16px;
-  transition: background-color 0.3s;
-}
-
-button:hover {
-  background-color: #1ed760;
-}
-
-/* Results container style */
-#results-container {
-  width: 100%;
-  max-width: 600px;
-  text-align: center;
-  margin-top: 20px;
-}
-
-/* Tracks container style */
-.tracks {
-  display: flex;
-  flex-direction: column;
-  gap: 15px;
-}
-
-/* Individual track style */
-.track {
-  padding: 15px;
-  margin: 0 auto;
-  border: 1px solid #ccc;
-  border-radius: 8px;
-  background-color: #fff;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  width: 100%;
-  max-width: 500px; /* Increased max-width for larger display */
-}
-
-.track p {
-  margin: 0;
-  font-size: 16px;
-  font-weight: bold;
-}
-
-.track a {
-  display: block;
-  margin-top: 10px;
-  color: #1db954;
-  text-decoration: none;
-  font-size: 14px;
-}
-
-.track a:hover {
-  text-decoration: underline;
-}
-
-/* Logout button style */
-#logout-button {
-  display: block;
-  margin: 30px auto;
-  padding: 10px 20px;
-  background-color: #ff3b3b;
-  color: #fff;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-  font-size: 16px;
-  transition: background-color 0.3s;
-}
-
-#logout-button:hover {
-  background-color: #ff5e5e;
-}
-
-/* Back button style */
-#back-button {
-  display: block;
-  margin: 20px auto;
-  padding: 10px 20px;
-  background-color: #555;
-  color: #fff;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-  font-size: 16px;
-  transition: background-color 0.3s;
-}
-
-#back-button:hover {
-  background-color: #777;
-}
-</style>
-</head>
-<body>
-
-<h1>Spotify API Mood Search</h1>
-
-<div class="search-container">
-  <select id="moods">
-    <option value="0">Select a mood...</option>
-    <option value="chill">Chill</option>
-    <option value="sad">Sad</option>
-    <option value="happy">Happy</option>
-  </select>
-
-  <button onclick="searchSongs()">Search</button>
-</div>
-
-<div id="results-container">
-  <div id="results"></div>
-</div>
-
-<button id="logout-button">Logout</button>
-
-<script>
 $(document).ready(function() {
   // Attach event listener to logout button
   $("#logout-button").click(function() {
@@ -264,7 +65,7 @@ function searchRecommendedTracks(mood, accessToken) {
       "Authorization": "Bearer " + accessToken
     },
     success: function(response) {
-      displayResults(response);
+      displayResults(response, accessToken);
     },
     error: function(xhr, status, error) {
       console.log(error);
@@ -272,12 +73,12 @@ function searchRecommendedTracks(mood, accessToken) {
   });
 }
 
-function displayResults(data) {
+function displayResults(data, accessToken) {
   var tracks = data.tracks;
   var html = "<h2>Recommended Tracks</h2>";
   html += "<div class='tracks'>";
-  var count = 0;
-  for (var i = 0; i < tracks.length && count < 5; i++) {
+  var trackUris = [];
+  for (var i = 0; i < tracks.length; i++) {
     var trackName = tracks[i].name;
     var trackId = tracks[i].id;
     var artistName = tracks[i].artists[0].name;
@@ -285,12 +86,12 @@ function displayResults(data) {
     var previewUrl = tracks[i].preview_url;
     var spotifyUrl = "https://open.spotify.com/track/" + trackId;
     if (previewUrl) {
+      trackUris.push('spotify:track:' + trackId);
       html += "<div class='track'>";
-      html += '<p><a href="https://scripteds.github.io/MoodSwinger/track.html" onclick="return saveTrackDetails(\'' + trackId + '\', \'' + trackName + '\', \'' + artistName + '\', \'' + releaseYear + '\')">' + trackName + '</a></p>';
+      html += '<p><a href="https://scripteds.github.io/MoodSwinger/track.html" onclick="saveTrackDetails(\'' + trackId + '\', \'' + trackName + '\', \'' + artistName + '\', \'' + releaseYear + '\')">' + trackName + '</a></p>';
       html += '<iframe src="https://open.spotify.com/embed/track/' + trackId + '" width="400" height="100" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>';
       html += '<a href="' + spotifyUrl + '" target="_blank">Listen on Spotify</a>';
       html += "</div>";
-      count++;
     }
   }
   html += "</div>";
@@ -298,20 +99,117 @@ function displayResults(data) {
 
   // Store search results in sessionStorage
   sessionStorage.setItem('searchResults', html);
+
+  // Create playlist and add tracks
+  createPlaylistAndAddTracks(trackUris, accessToken);
 }
 
-function saveTrackDetails(trackId, trackName, artistName, releaseYear) {
-  sessionStorage.setItem('trackId', trackId);
-  sessionStorage.setItem('trackName', trackName);
-  sessionStorage.setItem('artistName', artistName);
-  sessionStorage.setItem('releaseYear', releaseYear);
-
-  // Redirect to track.html after saving the details
-  window.location.href = "https://scripteds.github.io/MoodSwinger/track.html";
-  return false; // Prevent default link behavior
+function createPlaylistAndAddTracks(trackUris, accessToken) {
+  // Get user ID
+  $.ajax({
+    url: "https://api.spotify.com/v1/me",
+    type: "GET",
+    headers: {
+      "Authorization": "Bearer " + accessToken
+    },
+    success: function(response) {
+      var userId = response.id;
+      // Create playlist
+      $.ajax({
+        url: `https://api.spotify.com/v1/users/${userId}/playlists`,
+        type: "POST",
+        headers: {
+          "Authorization": "Bearer " + accessToken,
+          "Content-Type": "application/json"
+        },
+        data: JSON.stringify({
+          name: 'My Mood Playlist',
+          public: true
+        }),
+        success: function(playlistResponse) {
+          var playlistId = playlistResponse.id;
+          // Add tracks to playlist
+          $.ajax({
+            url: `https://api.spotify.com/v1/playlists/${playlistId}/tracks`,
+            type: "POST",
+            headers: {
+              "Authorization": "Bearer " + accessToken,
+              "Content-Type": "application/json"
+            },
+            data: JSON.stringify({
+              uris: trackUris
+            }),
+            success: function() {
+              // Play the playlist
+              playPlaylist(playlistId, accessToken);
+            },
+            error: function(xhr, status, error) {
+              console.log(error);
+            }
+          });
+        },
+        error: function(xhr, status, error) {
+          console.log(error);
+        }
+      });
+    },
+    error: function(xhr, status, error) {
+      console.log(error);
+    }
+  });
 }
-</script>
 
+function playPlaylist(playlistId, accessToken) {
+  window.onSpotifyWebPlaybackSDKReady = () => {
+    const player = new Spotify.Player({
+      name: 'Web Playback SDK Player',
+      getOAuthToken: cb => { cb(accessToken); }
+    });
 
-</body>
-</html>
+    // Error handling
+    player.addListener('initialization_error', ({ message }) => { console.error(message); });
+    player.addListener('authentication_error', ({ message }) => { console.error(message); });
+    player.addListener('account_error', ({ message }) => { console.error(message); });
+    player.addListener('playback_error', ({ message }) => { console.error(message); });
+
+    // Playback status updates
+    player.addListener('player_state_changed', state => { console.log(state); });
+
+    // Ready
+    player.addListener('ready', ({ device_id }) => {
+      console.log('Ready with Device ID', device_id);
+
+      // Transfer playback to the Web Playback SDK
+      fetch('https://api.spotify.com/v1/me/player', {
+        method: 'PUT',
+        headers: {
+          'Authorization': `Bearer ${accessToken}`,
+          'Content-Type': 'application/json'
+        },
+        body: JSON.stringify({
+          device_ids: [device_id],
+          play: true
+        })
+      });
+
+      // Start playback
+      fetch(`https://api.spotify.com/v1/me/player/play`, {
+        method: 'PUT',
+        headers: {
+          'Authorization': `Bearer ${accessToken}`,
+          'Content-Type': 'application/json'
+        },
+        body: JSON.stringify({
+          context_uri: `spotify:playlist:${playlistId}`
+        })
+      });
+    });
+
+    // Not Ready
+    player.addListener('not_ready', ({ device_id }) => {
+      console.log('Device ID has gone offline', device_id);
+    });
+
+    player.connect();
+  };
+}
