--- a/index.html
+++ b/index.html
@@ -4,8 +4,57 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MoodSwinger</title>
-    <style>
-        /* Styles go here */
+     <style>
+        /* Body style */
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            background-color: #f0f0f0;
+        }
+
+        /* Container style */
+        .container {
+            text-align: center;
+        }
+
+        /* Heading style */
+        h2 {
+            color: #333;
+        }
+
+        /* Paragraph style */
+        p {
+            color: #666;
+        }
+
+        /* Select dropdown style */
+        #dropdown {
+            background-color: #f2f2f2;
+            padding: 8px;
+            border-radius: 4px;
+            border: 1px solid #ccc;
+            width: 200px;
+            margin-bottom: 10px;
+        }
+
+        /* Login button style */
+        .spotify-login-btn {
+            background-color: #1db954;
+            color: #fff;
+            padding: 10px 20px;
+            text-decoration: none;
+            border-radius: 4px;
+            transition: background-color 0.3s;
+        }
+
+        .spotify-login-btn:hover {
+            background-color: #1ed760;
+        }
     </style>
 </head>
 <body>
